# api-mock-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Leptos.toml  Makefile  README.md  dev.db-shm  dev.db-wal  docker-compose.override.yml  docker-compose.yml  go.work.sum
.github/workflows/: ci.yml  publish-on-tag.yml  security.yml
backend/: .air.toml  .dockerignore  .golangci.yml  Dockerfile  Makefile  go.mod  go.sum
backend/cmd/server/: admin.go  main.go
backend/internal/adapters/http/handler/: auth_handler.go  auth_handler_test.go  response.go
backend/internal/adapters/http/middleware/: auth.go  auth_test.go
backend/internal/application/: auth_service.go  auth_service_test.go  repository.go  token_generator.go
backend/internal/application/dto/: auth_dto.go
backend/internal/domain/: errors.go  user.go
backend/internal/infrastructure/auth/: jwt.go  jwt_test.go
backend/internal/infrastructure/config/: config.go
backend/internal/infrastructure/db/: db.go
backend/internal/infrastructure/db/models/: user_model.go
backend/internal/infrastructure/db/repositories/: user_repository.go
docker/: entrypoint.sh  nginx.conf
docs/: FEATURES.md  PROJECT-PLAN.md  TECH.md
frontend/: .dockerignore  Dockerfile  Makefile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/adapters/api/: AuthApiRepository.ts  apiClient.ts
frontend/src/application/auth/: AuthRepository.ts
frontend/src/domain/auth/: Auth.ts
frontend/src/infrastructure/auth/: AuthContext.test.tsx  AuthContext.tsx  tokenStorage.test.ts  tokenStorage.ts
frontend/src/infrastructure/http/: axiosInstance.ts
frontend/src/test/: setup.ts
frontend/src/ui/components/: ProtectedRoute.test.tsx  ProtectedRoute.tsx
frontend/src/ui/pages/: HomePage.tsx  LoginPage.test.tsx  LoginPage.tsx
migrations/: 0001_create_groups.sql  0002_create_users.sql  0003_create_collections.sql  0004_create_collection_shares.sql  0005_create_endpoints.sql  0006_add_collection_code.sql
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/http/: auth.rs  collections.rs  error.rs  extractor.rs  groups.rs  mocks.rs  mod.rs  users.rs
src/adapters/ui/: api.rs  auth.rs  collections.rs  components.rs  endpoints.rs  groups.rs  layout.rs  mod.rs  users.rs
src/application/: mod.rs
src/application/dto/: collection.rs  collection_share.rs  endpoint.rs  group.rs  mod.rs  pagination.rs  user.rs
src/application/io/: bruno.rs  mod.rs  postman.rs
src/application/repositories/: collection.rs  collection_share.rs  endpoint.rs  group.rs  mod.rs  user.rs
src/application/services/: auth.rs  collections.rs  endpoints.rs  fakes.rs  groups.rs  import_export.rs  mocks.rs  mod.rs  users.rs
src/domain/: collection.rs  collection_share.rs  endpoint.rs  errors.rs  group.rs  mock.rs  mod.rs  user.rs
src/infrastructure/: config.rs  mod.rs  state.rs
src/infrastructure/auth/: jwt.rs  password.rs
src/infrastructure/db/: collection_shares.rs  collections.rs  endpoints.rs  groups.rs  mod.rs  users.rs
style/: main.css
