[package]
name = "api-mock-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "api-mock-server"
required-features = ["ssr"]

[dependencies]
leptos = { version = "0.7", features = [] }
leptos_router = { version = "0.7", features = [] }
leptos_meta = { version = "0.7", features = [] }
leptos_axum = { version = "0.7", optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "migrate", "uuid", "chrono"], optional = true }
tower = { version = "0.5", features = ["full"], optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2"

[features]
default = []
ssr = [
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:sqlx",
    "dep:tower",
    "dep:tower-http",
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos_meta/ssr",
    "uuid/v4",
]
hydrate = [
    "leptos/hydrate",
]
