[package]
name = "api-mock-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "api-mock-server"
required-features = ["ssr"]

[dependencies]
leptos = { version = "0.7", features = [] }
leptos_router = { version = "0.7", features = [] }
leptos_meta = { version = "0.7", features = [] }
leptos_axum = { version = "0.7", optional = true }
axum = { version = "0.7", optional = true }
axum-extra = { version = "0.9", features = ["typed-header"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "migrate", "uuid", "chrono", "any"], optional = true }
tower = { version = "0.5", features = ["full"], optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
async-trait = { version = "0.1", optional = true }
bcrypt = { version = "0.15", optional = true }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"], optional = true }
rand = { version = "0.8", optional = true }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2"

# On wasm32, uuid's v4 feature needs a JS entropy source (crypto.getRandomValues).
# Cargo merges features across sections, so this adds "js" only for WASM builds.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }

[features]
default = []
ssr = [
    "dep:leptos_axum",
    "dep:axum",
    "dep:axum-extra",
    "dep:tokio",
    "dep:sqlx",
    "dep:tower",
    "dep:tower-http",
    "dep:async-trait",
    "dep:bcrypt",
    "dep:jsonwebtoken",
    "dep:rand",
    "dep:serde_json",
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos_meta/ssr",
]
hydrate = [
    "leptos/hydrate",
]
