[workspace]
resolver = "2"

[[workspace.metadata.leptos]]
name = "api-mock-server"
bin-package = "api-mock-server"
bin-target = "api-mock-server"
lib-package = "api-mock-server"
output-name = "api-mock-server"
site-root = "site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "public"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false

[package]
name = "api-mock-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "api-mock-server"
required-features = ["ssr"]

[[bin]]
name = "create-admin"
path = "src/bin/create_admin.rs"
required-features = ["ssr"]

[dependencies]
leptos = { version = "0.7", features = [] }
leptos_router = { version = "0.7", features = [] }
leptos_meta = { version = "0.7", features = [] }
leptos_axum = { version = "0.7", optional = true }
axum = { version = "0.7", optional = true }
axum-extra = { version = "0.9", features = ["typed-header"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "migrate", "uuid", "chrono", "any"], optional = true }
tower = { version = "0.5", features = ["full"], optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
async-trait = { version = "0.1", optional = true }
bcrypt = { version = "0.15", optional = true }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"], optional = true }
rand = { version = "0.8", optional = true }
rpassword = { version = "7", optional = true }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", optional = true }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rhai = "=1.24.0"
rhai_codegen = "3.2.0"
cargo-leptos = "0.3.6"
cargo-generate = "0.23.10"
wasm-bindgen = "0.2"

# On wasm32, uuid's v4 feature needs a JS entropy source (crypto.getRandomValues).
# Cargo merges features across sections, so this adds "js" only for WASM builds.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }
gloo-net = { version = "0.5", features = ["http", "json"] }
web-sys = { version = "0.3", features = ["Window", "Storage", "File", "FileList", "HtmlInputElement", "FormData", "Blob", "Url", "HtmlAnchorElement", "Document", "HtmlElement", "Navigator", "Clipboard"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = []
ssr = [
    "dep:leptos_axum",
    "dep:axum",
    "dep:axum-extra",
    "dep:tokio",
    "dep:sqlx",
    "dep:tower",
    "dep:tower-http",
    "dep:async-trait",
    "dep:bcrypt",
    "dep:jsonwebtoken",
    "dep:rand",
    "dep:zip",
    "dep:rpassword",
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos_meta/ssr",
]
hydrate = [
    "leptos/hydrate",
]
